# ChillFlix-Wed-App

./: README.md
Web/: docker-compose.yml
Web/backend/: .gitignore  categories.json  docker-compose.yml  dockerfile.Mongo  dockerfile.Recommend  movies.json
Web/backend/data/: keep.txt
Web/backend/src/MongoServer/: app.js  package-lock.json  package.json
Web/backend/src/MongoServer/controllers/: category.js  movie.js  tokens.js  upload.js  user.js  verify.js
Web/backend/src/MongoServer/models/: category.js  user.js  (+1 more)
Web/backend/src/RecommendSystem/: CMakeLists.txt  ClientManager.py  Main.cpp
Web/backend/src/RecommendSystem/Commands/: AddCommand.cpp  AddCommand.h  DELETECommand.cpp  DELETECommand.h  GETCommand.cpp  GETCommand.h  HelpCommand.cpp  HelpCommand.h  PATCHCommand.cpp  PATCHCommand.h  POSTCommand.cpp  POSTCommand.h
Web/backend/src/RecommendSystem/Core/: App.cpp  App.h  ConsoleMenu.cpp  ConsoleMenu.h  ServerManager.cpp  ServerManager.h  ThreadPool.cpp  ThreadPool.h
Web/backend/src/RecommendSystem/Interfaces/: ICommand.h  IMenu.h
Web/backend/src/RecommendSystem/Models/: DataManagement.cpp  DataManagement.h  Movies.cpp  Movies.h  Users.cpp  Users.h
Web/backend/src/RecommendSystem/Tests/: AddCommandTests.cpp  DELETECommandTests.cpp  GETCommandTests.cpp  PATCHCommandTests.cpp  POSTCommandTests.cpp  ServerManagerTests.cpp
Web/backend/src/RecommendSystem/Utilities/: StatusHandler.cpp  StatusHandler.h
Web/frontend/: dockerfile.React  package-lock.json  package.json
Web/frontend/public/: index.html
Web/frontend/src/: App.js
Web/frontend/src/utils/: api.js
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
wiki/: Android.md  Setup.md  Web.md
(+141 files in other folders)
